--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "buscadorcep",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://felipecacezi.github.io/buscador-cep/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -18,12 +19,12 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy": "yarn run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject"    
   },
   "eslintConfig": {
     "extends": "react-app"
