--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buscadorcep",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://felipecacezi.github.io/buscador-cep/",
+  "homepage": "https://felipecacezi.github.io/Busca-CEP/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
